--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1832,10 +1832,12 @@ JudgmentXOffsetOneSideP1=0
 JudgmentXOffsetOneSideP2=0
 JudgmentXOffsetBothSides=0
 JudgmentY=210
+JudgmentYReverse=270
 ComboXOffsetOneSideP1=0
 ComboXOffsetOneSideP2=0
 ComboXOffsetBothSides=0
 ComboY=270
+ComboYReverse=210
 HoldJudgmentYStandard=150
 HoldJudgmentYReverse=330
 BrightGhostComboThreshold=100
