--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1395,6 +1395,7 @@ ShowOK=1
 ShowMaxCombo=1
 ShowScoreArea=1
 ShowTimeArea=0
+ShowGraphArea=0
 HelpText=Press START to continue
 TimerSeconds=15
 StyleIcon=1
@@ -1428,6 +1429,7 @@ ShowOK=1
 ShowMaxCombo=1
 ShowScoreArea=1
 ShowTimeArea=0
+ShowGraphArea=0
 HelpText=Press START to continue
 TimerSeconds=30
 StyleIcon=1
@@ -1461,6 +1463,7 @@ ShowOK=1
 ShowMaxCombo=0
 ShowScoreArea=1
 ShowTimeArea=0
+ShowGraphArea=0
 HelpText=Press START to continue
 TimerSeconds=30
 StyleIcon=1
@@ -1494,6 +1497,7 @@ ShowOK=1
 ShowMaxCombo=0
 ShowScoreArea=0
 ShowTimeArea=1
+ShowGraphArea=0
 HelpText=Press START to continue
 TimerSeconds=30
 StyleIcon=1
@@ -1527,6 +1531,7 @@ ShowOK=1
 ShowMaxCombo=0
 ShowScoreArea=0
 ShowTimeArea=1
+ShowGraphArea=0
 HelpText=Press START to continue
 TimerSeconds=30
 StyleIcon=1
@@ -1560,6 +1565,7 @@ ShowOK=1
 ShowMaxCombo=0
 ShowScoreArea=1
 ShowTimeArea=0
+ShowGraphArea=0
 HelpText=Press START to continue
 TimerSeconds=15
 StyleIcon=1
@@ -1593,6 +1599,7 @@ ShowOK=1
 ShowMaxCombo=0c
 ShowScoreArea=1
 ShowTimeArea=0
+ShowGraphArea=0
 HelpText=Press START to continue
 TimerSeconds=15
 StyleIcon=1
