enabled the Rankings screen, fixed song display scores, with difficulty columns

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2391,6 +2391,7 @@ LineSpacingY=60
 BulletsStartX=100
 BulletsStartY=140
 TextZoom=1.0
+TextSongZoom=0.5
 TextColor=0.8,0.8,1,1
 NamesStartX=180
 NamesStartY=140
@@ -2412,10 +2413,14 @@ NotesTypesToHide=dance-couple,dance-solo,pump-halfdouble
 TextColor1=0.6,0.6,1,1
 TextColor2=1,0.3,0.3,1
 TextColor3=0.3,1,0.3,1
-EmptyScoreName=STEP
+EmptyScoreName=STEP	
 EmptyCategoryScore=53700
 EmptyCourseScore=537
 EmptyCourseTime=60
+EmptySongPercent=0
+ShowDiffCol=beginner,easy,medium,hard,challenge
+
+
 # Not all game types have NotesTypesToHide set, so add a few dummy colors
 # to prevent a crash.
 TextColor4=1.0,1,1.0,1
