more high score cleanup

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1359,14 +1359,22 @@ TimeNumberP2X=480
 TimeNumberP2Y=380
 TimeNumberP2OnCommand=addx,320;sleep,0.8;decelerate,0.3;addx,-320
 TimeNumberP2OffCommand=sleep,0.0;accelerate,0.3;addx,320
-NewRecordP1X=150
-NewRecordP1Y=398
-NewRecordP1OnCommand=diffusealpha,0;linear,0.7;diffusealpha,1;glowshift
-NewRecordP1OffCommand=linear,0.7;diffusealpha,0
-NewRecordP2X=490
-NewRecordP2Y=398
-NewRecordP2OnCommand=diffusealpha,0;linear,0.7;diffusealpha,1;glowshift
-NewRecordP2OffCommand=linear,0.7;diffusealpha,0
+MachineRecordP1X=70
+MachineRecordP1Y=398
+MachineRecordP1OnCommand=diffusealpha,0;linear,0.7;diffusealpha,1;glowshift
+MachineRecordP1OffCommand=linear,0.7;diffusealpha,0
+MachineRecordP2X=440
+MachineRecordP2Y=398
+MachineRecordP2OnCommand=diffusealpha,0;linear,0.7;diffusealpha,1;glowshift
+MachineRecordP2OffCommand=linear,0.7;diffusealpha,0
+PersonalRecordP1X=200
+PersonalRecordP1Y=398
+PersonalRecordP1OnCommand=diffusealpha,0;linear,0.7;diffusealpha,1;glowshift
+PersonalRecordP1OffCommand=linear,0.7;diffusealpha,0
+PersonalRecordP2X=570
+PersonalRecordP2Y=398
+PersonalRecordP2OnCommand=diffusealpha,0;linear,0.7;diffusealpha,1;glowshift
+PersonalRecordP2OffCommand=linear,0.7;diffusealpha,0
 TryExtraStageX=320
 TryExtraStageY=428
 TryExtraStageOnCommand=diffusealpha,0;linear,0.7;diffusealpha,1;glowshift
@@ -2384,6 +2392,8 @@ NextScreen=ScreenUnlock
 CategoryX=517
 CategoryY=32
 CategoryWidth=222
+BannerX=517
+BannerY=32
 TypeX=520
 TypeY=60
 LineSpacingX=0
@@ -2391,7 +2401,7 @@ LineSpacingY=60
 BulletsStartX=100
 BulletsStartY=140
 TextZoom=1.0
-TextSongZoom=0.5
+TextSongZoom=0.7
 TextColor=0.8,0.8,1,1
 NamesStartX=180
 NamesStartY=140
@@ -2401,24 +2411,20 @@ PointsStartX=380
 PointsStartY=140
 TimeStartX=560
 TimeStartY=140
-PercentStartX=560
+PercentStartX=210
 PercentStartY=140
-PercentColSpacingX=100
+PercentColSpacingX=110
 PercentColSpacingY=0
 SecondsPerPage=5
 ShowCategories=1
-ShowAllSongs=0
+ShowAllSongs=1
 CoursesToShow=Courses/DDRMAX/NaokiStandard.crs,Courses/DDRMAX/ParanoiaBrothers.crs,Courses/Samples/PlayersBest1-4.crs
 NotesTypesToHide=dance-couple,dance-solo,pump-halfdouble
 TextColor1=0.6,0.6,1,1
 TextColor2=1,0.3,0.3,1
 TextColor3=0.3,1,0.3,1
-EmptyScoreName=STEP	
-EmptyCategoryScore=53700
-EmptyCourseScore=537
-EmptyCourseTime=60
-EmptySongPercent=0
-ShowDiffCol=beginner,easy,medium,hard,challenge
+EmptyScoreName=STEP
+ShowSongDifficulties=easy,medium,hard,challenge
 
 
 # Not all game types have NotesTypesToHide set, so add a few dummy colors
@@ -2488,7 +2494,8 @@ NextScreen=ScreenRanking
 [ScreenNameEntry]
 TimerX=320
 TimerY=30
-CategoryY=444
+CategoryY=430
+CategoryZoom=0.7
 CharsZoomSmall=1.0
 CharsZoomLarge=1.5
 CharsSpacingY=40
