finish high score work

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2393,7 +2393,9 @@ CategoryX=517
 CategoryY=32
 CategoryWidth=222
 BannerX=517
-BannerY=32
+BannerY=44
+BannerWidth=220
+BannerHeight=58
 TypeX=520
 TypeY=60
 LineSpacingX=0
@@ -2416,8 +2418,8 @@ PercentStartY=140
 PercentColSpacingX=110
 PercentColSpacingY=0
 SecondsPerPage=5
-ShowCategories=1
-ShowAllSongs=0
+ShowCategories=0
+ShowAllSongs=1
 CoursesToShow=Courses/DDRMAX/NaokiStandard.crs,Courses/DDRMAX/ParanoiaBrothers.crs,Courses/Samples/PlayersBest1-4.crs
 NotesTypesToHide=dance-couple,dance-solo,pump-halfdouble
 TextColor1=0.6,0.6,1,1
