fix exit from select game menu

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2671,7 +2671,7 @@ Game=Change the current game type with this option.
 StyleIcon=0
 TimerSeconds=0
 PrevScreen=ScreenTitleMenu
-NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
+NextScreen=ScreenTitleMenu
 
 OptionMenuFlags=rows,1;together
 Line1=conf,Game
