add animation metrics to ScreenRanking

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2392,33 +2392,103 @@ NextScreen=ScreenUnlock
 CategoryX=517
 CategoryY=32
 CategoryWidth=222
+CategoryOnCommand=addx,640;sleep,0.0;bounceend,1;addx,-640
+CategoryOffCommand=sleep,0.0;linear,0.5;diffusealpha,0
 BannerX=517
 BannerY=44
 BannerWidth=220
 BannerHeight=58
+BannerOnCommand=addx,640;sleep,0.0;bounceend,1;addx,-640
+BannerOffCommand=sleep,0.0;linear,0.5;diffusealpha,0
 TypeX=520
 TypeY=60
+TypeOnCommand=addx,640;sleep,0.0;bounceend,1;addx,-640
+TypeOffCommand=sleep,0.0;linear,0.5;diffusealpha,0
 LineSpacingX=0
 LineSpacingY=60
 BulletsStartX=100
 BulletsStartY=140
+Bullets1OnCommand=addx,640;sleep,0.2;bounceend,1;addx,-640
+Bullets2OnCommand=addx,640;sleep,0.3;bounceend,1;addx,-640
+Bullets3OnCommand=addx,640;sleep,0.4;bounceend,1;addx,-640
+Bullets4OnCommand=addx,640;sleep,0.5;bounceend,1;addx,-640
+Bullets5OnCommand=addx,640;sleep,0.6;bounceend,1;addx,-640
+Bullets1OffCommand=sleep,0.2;linear,0.5;diffusealpha,0
+Bullets2OffCommand=sleep,0.3;linear,0.5;diffusealpha,0
+Bullets3OffCommand=sleep,0.4;linear,0.5;diffusealpha,0
+Bullets4OffCommand=sleep,0.5;linear,0.5;diffusealpha,0
+Bullets5OffCommand=sleep,0.6;linear,0.5;diffusealpha,0
 TextZoom=1.0
 TextSongZoom=0.7
 TextColor=0.8,0.8,1,1
 NamesStartX=180
 NamesStartY=140
+Names1OnCommand=addx,640;sleep,0.2;bounceend,1;addx,-640
+Names2OnCommand=addx,640;sleep,0.3;bounceend,1;addx,-640
+Names3OnCommand=addx,640;sleep,0.4;bounceend,1;addx,-640
+Names4OnCommand=addx,640;sleep,0.5;bounceend,1;addx,-640
+Names5OnCommand=addx,640;sleep,0.6;bounceend,1;addx,-640
+Names1OffCommand=sleep,0.2;linear,0.5;diffusealpha,0
+Names2OffCommand=sleep,0.3;linear,0.5;diffusealpha,0
+Names3OffCommand=sleep,0.4;linear,0.5;diffusealpha,0
+Names4OffCommand=sleep,0.5;linear,0.5;diffusealpha,0
+Names5OffCommand=sleep,0.6;linear,0.5;diffusealpha,0
 ScoresStartX=520
-ScoresStartY=140
+ScoresStartY=140 
+Scores1OnCommand=addx,640;sleep,0.2;bounceend,1;addx,-640
+Scores2OnCommand=addx,640;sleep,0.3;bounceend,1;addx,-640
+Scores3OnCommand=addx,640;sleep,0.4;bounceend,1;addx,-640
+Scores4OnCommand=addx,640;sleep,0.5;bounceend,1;addx,-640
+Scores5OnCommand=addx,640;sleep,0.6;bounceend,1;addx,-640
+Scores1OffCommand=sleep,0.2;linear,0.5;diffusealpha,0
+Scores2OffCommand=sleep,0.3;linear,0.5;diffusealpha,0
+Scores3OffCommand=sleep,0.4;linear,0.5;diffusealpha,0
+Scores4OffCommand=sleep,0.5;linear,0.5;diffusealpha,0
+Scores5OffCommand=sleep,0.6;linear,0.5;diffusealpha,0
 PointsStartX=380
 PointsStartY=140
+Points1OnCommand=addx,640;sleep,0.2;bounceend,1;addx,-640
+Points2OnCommand=addx,640;sleep,0.3;bounceend,1;addx,-640
+Points3OnCommand=addx,640;sleep,0.4;bounceend,1;addx,-640
+Points4OnCommand=addx,640;sleep,0.5;bounceend,1;addx,-640
+Points5OnCommand=addx,640;sleep,0.6;bounceend,1;addx,-640
+Points1OffCommand=sleep,0.2;linear,0.5;diffusealpha,0
+Points2OffCommand=sleep,0.3;linear,0.5;diffusealpha,0
+Points3OffCommand=sleep,0.4;linear,0.5;diffusealpha,0
+Points4OffCommand=sleep,0.5;linear,0.5;diffusealpha,0
+Points5OffCommand=sleep,0.6;linear,0.5;diffusealpha,0
 TimeStartX=560
 TimeStartY=140
-PercentStartX=210
+Time1OnCommand=addx,640;sleep,0.2;bounceend,1;addx,-640
+Time2OnCommand=addx,640;sleep,0.3;bounceend,1;addx,-640
+Time3OnCommand=addx,640;sleep,0.4;bounceend,1;addx,-640
+Time4OnCommand=addx,640;sleep,0.5;bounceend,1;addx,-640
+Time5OnCommand=addx,640;sleep,0.6;bounceend,1;addx,-640
+Time1OffCommand=sleep,0.2;linear,0.5;diffusealpha,0
+Time2OffCommand=sleep,0.3;linear,0.5;diffusealpha,0
+Time3OffCommand=sleep,0.4;linear,0.5;diffusealpha,0
+Time4OffCommand=sleep,0.5;linear,0.5;diffusealpha,0
+Time5OffCommand=sleep,0.6;linear,0.5;diffusealpha,0
+PercentStartX=170
 PercentStartY=140
-PercentColSpacingX=110
-PercentColSpacingY=0
+Percent1OnCommand=addx,640;sleep,0.2;bounceend,1;addx,-640
+Percent2OnCommand=addx,640;sleep,0.3;bounceend,1;addx,-640
+Percent3OnCommand=addx,640;sleep,0.4;bounceend,1;addx,-640
+Percent4OnCommand=addx,640;sleep,0.5;bounceend,1;addx,-640
+Percent5OnCommand=addx,640;sleep,0.6;bounceend,1;addx,-640
+Percent1OffCommand=sleep,0.2;linear,0.5;diffusealpha,0
+Percent2OffCommand=sleep,0.3;linear,0.5;diffusealpha,0
+Percent3OffCommand=sleep,0.4;linear,0.5;diffusealpha,0
+Percent4OffCommand=sleep,0.5;linear,0.5;diffusealpha,0
+Percent5OffCommand=sleep,0.6;linear,0.5;diffusealpha,0
+DifficultyStartX=170
+DifficultyStartY=110
+DifficultySpacingX=110
+DifficultySpacingY=0
+DifficultyOnCommand=addx,640;sleep,0.1;bounceend,1;addx,-640
+DifficultyOffCommand=sleep,0.1;linear,0.5;diffusealpha,0
 SecondsPerPage=5
-ShowCategories=0
+ShowCategories=1
 ShowAllSongs=1
 CoursesToShow=Courses/DDRMAX/NaokiStandard.crs,Courses/DDRMAX/ParanoiaBrothers.crs,Courses/Samples/PlayersBest1-4.crs
 NotesTypesToHide=dance-couple,dance-solo,pump-halfdouble
@@ -2426,7 +2496,7 @@ TextColor1=0.6,0.6,1,1
 TextColor2=1,0.3,0.3,1
 TextColor3=0.3,1,0.3,1
 EmptyScoreName=STEP
-ShowSongDifficulties=easy,medium,hard,challenge
+DifficultiesToShow=easy,medium,hard,challenge
 
 
 # Not all game types have NotesTypesToHide set, so add a few dummy colors
