add animation metrics to ScreenRanking

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2482,7 +2482,7 @@ Percent3OffCommand=sleep,0.4;linear,0.5;diffusealpha,0
 Percent4OffCommand=sleep,0.5;linear,0.5;diffusealpha,0
 Percent5OffCommand=sleep,0.6;linear,0.5;diffusealpha,0
 DifficultyStartX=170
-DifficultyStartY=110
+DifficultyStartY=96
 DifficultySpacingX=110
 DifficultySpacingY=0
 DifficultyOnCommand=addx,640;sleep,0.1;bounceend,1;addx,-640
@@ -2497,7 +2497,7 @@ TextColor2=1,0.3,0.3,1
 TextColor3=0.3,1,0.3,1
 EmptyScoreName=STEP
 DifficultiesToShow=easy,medium,hard,challenge
-
+PageFadeSeconds=0.5
 
 # Not all game types have NotesTypesToHide set, so add a few dummy colors
 # to prevent a crash.
