only show a few songs each time through ScreenRanking

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2489,7 +2489,8 @@ DifficultyOnCommand=addx,640;sleep,0.1;bounceend,1;addx,-640
 DifficultyOffCommand=sleep,0.1;linear,0.5;diffusealpha,0
 SecondsPerPage=5
 ShowCategories=1
-ShowAllSongs=1
+ShowSongScores=0
+NumSongsToShow=10
 CoursesToShow=Courses/DDRMAX/NaokiStandard.crs,Courses/DDRMAX/ParanoiaBrothers.crs,Courses/Samples/PlayersBest1-4.crs
 NotesTypesToHide=dance-couple,dance-solo,pump-halfdouble
 TextColor1=0.6,0.6,1,1
