Split off separate DemonstrationSound pref

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2153,6 +2153,7 @@ HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::
 EasterEggs=Enable or disable some special easter eggs.
 MarvelousTiming=Enable or disable marvelous judgement.  NEVER - never show Marvelous,::COURSES ONLY - only during nonstop/oni modes, ALWAYS - all modes of play
 HiddenSongs=Some songs are only playable during Oni courses and::with roulette.  Leave this &oq;OFF&cq; to always display all songs.
+AllowExtraStage=
 PickExtraStage=Instead of a set extra stage, this allows::the player to choose which song to play.::Difficulty and options are still locked.
 SoloSingles=Turn this option &oq;ON&cq; to enable Solo-Style::for 4-panel single play.
 UnlockSystem=Enable or disable unlock system.
@@ -2161,13 +2162,14 @@ TimerSeconds=0
 PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
 NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
 
-OptionMenuFlags=rows,6;together;explanations
+OptionMenuFlags=rows,7;together;explanations
 Line1=conf,SoloSingles
 Line2=conf,HiddenSongs
 Line3=conf,EasterEggs
 Line4=conf,MarvelousTiming
-Line5=conf,PickExtraStage
-Line6=conf,UnlockSystem
+Line5=conf,AllowExtraStage
+Line6=conf,PickExtraStage
+Line7=conf,UnlockSystem
 
 [ScreenBackgroundOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
@@ -2512,6 +2514,7 @@ MasterVolume=
 PreloadSounds=If YES, preload most sounds in advance.  This increases load times,::and should normally be left OFF.
 ResamplingQuality=Advanced: Select the resampling quality to use.
 AttractSound=Set to ON to play sound during the attract screens.::Set to OFF to mute sounds durring attract.
+DemonstrationSound=
 SoundVolume=
 StyleIcon=0
 TimerSeconds=0
@@ -2519,11 +2522,12 @@ TimerSeconds=0
 PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
 NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
 
-OptionMenuFlags=rows,4;together;explanations
+OptionMenuFlags=rows,5;together;explanations
 Line1=conf,PreloadSounds
 Line2=conf,ResamplingQuality
 Line3=conf,AttractSound
-Line4=conf,SoundVolume
+Line4=conf,DemonstrationSound
+Line5=conf,SoundVolume
 
 [ScreenIntroMovie]
 NextScreen=ScreenDemonstration
