--- a/stepmania/src/StepMania.vcproj
+++ b/stepmania/src/StepMania.vcproj
@@ -1134,6 +1134,12 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 				RelativePath=".\GradeDisplay.h">
 			</File>
 			<File
+				RelativePath="GraphDisplay.cpp">
+			</File>
+			<File
+				RelativePath="GraphDisplay.h">
+			</File>
+			<File
 				RelativePath="GrooveGraph.cpp">
 			</File>
 			<File
