--- a/stepmania/src/StepMania.vcproj
+++ b/stepmania/src/StepMania.vcproj
@@ -1080,6 +1080,12 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 				RelativePath=".\BPMDisplay.h">
 			</File>
 			<File
+				RelativePath="ComboGraph.cpp">
+			</File>
+			<File
+				RelativePath="ComboGraph.h">
+			</File>
+			<File
 				RelativePath="CourseContentsList.cpp">
 			</File>
 			<File
