--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1404,6 +1404,7 @@ ShowMaxCombo=1
 ShowScoreArea=1
 ShowTimeArea=0
 ShowGraphArea=0
+ShowComboArea=0
 HelpText=Press START to continue
 TimerSeconds=15
 StyleIcon=1
@@ -1438,6 +1439,7 @@ ShowMaxCombo=1
 ShowScoreArea=1
 ShowTimeArea=0
 ShowGraphArea=0
+ShowComboArea=0
 HelpText=Press START to continue
 TimerSeconds=30
 StyleIcon=1
@@ -1472,6 +1474,7 @@ ShowMaxCombo=0
 ShowScoreArea=1
 ShowTimeArea=0
 ShowGraphArea=0
+ShowComboArea=0
 HelpText=Press START to continue
 TimerSeconds=30
 StyleIcon=1
@@ -1506,6 +1509,7 @@ ShowMaxCombo=0
 ShowScoreArea=0
 ShowTimeArea=1
 ShowGraphArea=0
+ShowComboArea=0
 HelpText=Press START to continue
 TimerSeconds=30
 StyleIcon=1
@@ -1540,6 +1544,7 @@ ShowMaxCombo=0
 ShowScoreArea=0
 ShowTimeArea=1
 ShowGraphArea=0
+ShowComboArea=0
 HelpText=Press START to continue
 TimerSeconds=30
 StyleIcon=1
@@ -1574,6 +1579,7 @@ ShowMaxCombo=0
 ShowScoreArea=1
 ShowTimeArea=0
 ShowGraphArea=0
+ShowComboArea=0
 HelpText=Press START to continue
 TimerSeconds=15
 StyleIcon=1
@@ -1608,6 +1614,7 @@ ShowMaxCombo=0c
 ShowScoreArea=1
 ShowTimeArea=0
 ShowGraphArea=0
+ShowComboArea=0
 HelpText=Press START to continue
 TimerSeconds=15
 StyleIcon=1
