--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1401,6 +1401,7 @@ ShowBoo=1
 ShowMiss=1
 ShowOK=1
 ShowMaxCombo=1
+ShowTotalError=0
 ShowScoreArea=1
 ShowTimeArea=0
 ShowGraphArea=0
@@ -1436,6 +1437,7 @@ ShowBoo=1
 ShowMiss=1
 ShowOK=1
 ShowMaxCombo=1
+ShowTotalError=0
 ShowScoreArea=1
 ShowTimeArea=0
 ShowGraphArea=0
@@ -1471,6 +1473,7 @@ ShowBoo=1
 ShowMiss=1
 ShowOK=1
 ShowMaxCombo=0
+ShowTotalError=0
 ShowScoreArea=1
 ShowTimeArea=0
 ShowGraphArea=0
@@ -1506,6 +1509,7 @@ ShowBoo=1
 ShowMiss=1
 ShowOK=1
 ShowMaxCombo=0
+ShowTotalError=0
 ShowScoreArea=0
 ShowTimeArea=1
 ShowGraphArea=0
@@ -1541,6 +1545,7 @@ ShowBoo=1
 ShowMiss=1
 ShowOK=1
 ShowMaxCombo=0
+ShowTotalError=0
 ShowScoreArea=0
 ShowTimeArea=1
 ShowGraphArea=0
@@ -1576,6 +1581,7 @@ ShowBoo=1
 ShowMiss=1
 ShowOK=1
 ShowMaxCombo=0
+ShowTotalError=0
 ShowScoreArea=1
 ShowTimeArea=0
 ShowGraphArea=0
@@ -1610,7 +1616,8 @@ ShowGood=1
 ShowBoo=1
 ShowMiss=1
 ShowOK=1
-ShowMaxCombo=0c
+ShowMaxCombo=0
+ShowTotalError=0
 ShowScoreArea=1
 ShowTimeArea=0
 ShowGraphArea=0
