--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1714,6 +1714,7 @@ SectionColor5=0.1,0.7,0.3,1	// green
 SectionColor6=0.8,0.6,0.0,1	// orange
 SectionColor7=1.0,0.3,0.3,1	// light red
 SongRealExtraColor=0.9,0.9,0,1		// yellow
+SortMenuColor=1,1,0,1
 ShowRoulette=1
 ShowRandom=1
 Use3D=0
