--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1406,6 +1406,7 @@ ShowScoreArea=1
 ShowTimeArea=0
 ShowGraphArea=0
 ShowComboArea=0
+ShowFullCombo=0
 HelpText=Press START to continue
 TimerSeconds=15
 StyleIcon=1
@@ -1442,6 +1443,7 @@ ShowScoreArea=1
 ShowTimeArea=0
 ShowGraphArea=0
 ShowComboArea=0
+ShowFullCombo=0
 HelpText=Press START to continue
 TimerSeconds=30
 StyleIcon=1
@@ -1478,6 +1480,7 @@ ShowScoreArea=1
 ShowTimeArea=0
 ShowGraphArea=0
 ShowComboArea=0
+ShowFullCombo=0
 HelpText=Press START to continue
 TimerSeconds=30
 StyleIcon=1
@@ -1514,6 +1517,7 @@ ShowScoreArea=0
 ShowTimeArea=1
 ShowGraphArea=0
 ShowComboArea=0
+ShowFullCombo=0
 HelpText=Press START to continue
 TimerSeconds=30
 StyleIcon=1
@@ -1550,6 +1554,7 @@ ShowScoreArea=0
 ShowTimeArea=1
 ShowGraphArea=0
 ShowComboArea=0
+ShowFullCombo=0
 HelpText=Press START to continue
 TimerSeconds=30
 StyleIcon=1
@@ -1586,6 +1591,7 @@ ShowScoreArea=1
 ShowTimeArea=0
 ShowGraphArea=0
 ShowComboArea=0
+ShowFullCombo=0
 HelpText=Press START to continue
 TimerSeconds=15
 StyleIcon=1
@@ -1622,6 +1628,7 @@ ShowScoreArea=1
 ShowTimeArea=0
 ShowGraphArea=0
 ShowComboArea=0
+ShowFullCombo=0
 HelpText=Press START to continue
 TimerSeconds=15
 StyleIcon=1
