--- a/stepmania/Themes/default/Fonts/_misc 16px.ini
+++ b/stepmania/Themes/default/Fonts/_misc 16px.ini
@@ -10,6 +10,13 @@
 10=20
 11=4
 12=20
+16=14
+17=18
+18=24
+19=22
+20=12
+21=12
+22=16
 
 
 AddToAllWidths=2
@@ -22,3 +29,4 @@ map doublezeta=5
 map planet=6
 
 line 1=←↑→↓☺
+line 2=♩♪♫♬♭♮♯
