Fixing commit message

--- a/stepmania/Themes/default/Fonts/_japanese 16px.ini
+++ b/stepmania/Themes/default/Fonts/_japanese 16px.ini
@@ -21,7 +21,7 @@ range basic-japanese=0
 [kanji 1]
 line 0=一二三四五六七八
 line 1=九十本語＆（）？
-line 2=！
+line 2=！／
 line 3=革命祭桜小坂鬼道
 line 4=弐神様民謡明日蒼
 line 5=衝動猫毛亜熱帯爆
@@ -53,5 +53,5 @@ line 0=惡憎敎有析武死生
 line 1=男眠胎自魂女宏和
 line 2=魅惑音頭踊貸与園
 line 3=黙藁面鳥近浩治入
-line 4=尾信充乙
+line 4=尾信充乙陽
 
