clean up TextBanner metrics

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2273,6 +2273,8 @@ Player2Profile=
 CreateNew=
 Delete=
 Rename=
+CardDirPlayer1=
+CardDirPlayer2=
 StyleIcon=0
 TimerSeconds=0
 
@@ -2725,9 +2727,15 @@ Line14=list,Reload Songs/Courses;title,;
 Line15=list,Test Input;title,;
 
 [TextBanner]
-Width=180
-Height=40
-HorizAlign=0
+TitleHorizX=-90
+SubTitleHorizX=-90
+ArtistHorizX=-90
+MaxTitleWidth=180
+MaxSubTitleWidth=180
+MaxArtistWidth=180
+TitleHorizAlign=0
+SubTitleHorizAlign=0
+ArtistHorizAlign=0
 ArtistPrependString=/
 TwoLinesTitleZoom=1.0
 TwoLinesArtistZoom=0.6
