Make header files and man pages an optional install. I decided that since they were so small, there was no reason not to include them. The added compressed files along with the longer config file take up exactly 595624 bytes more than without it. Not that big a deal considering the size to begin with.

--- a/stepmania/PBProject/scripts/installer.config
+++ b/stepmania/PBProject/scripts/installer.config
@@ -121,26 +121,6 @@ FILE:/usr/local/bin/libpng12-config:$OVERWRITE
 FILE:/usr/local/bin/rdjpgcom:$OVERWRITE
 FILE:/usr/local/bin/sdl-config:$OVERWRITE
 FILE:/usr/local/bin/wrjpgcom:$OVERWRITE
-#headers
-FILE:/usr/local/include/SDL:$OVERWRITE
-FILE:/usr/local/include/jconfig.h:$OVERWRITE
-FILE:/usr/local/include/jpeglib.h:$OVERWRITE
-FILE:/usr/local/include/jmorecfg.h:$OVERWRITE
-FILE:/usr/local/include/jerror.h:$OVERWRITE
-FILE:/usr/local/include/libpng:$OVERWRITE
-FILE:/usr/local/include/libpng12/png.h:$OVERWRITE
-FILE:/usr/local/include/libpng12/pngconf.h:$OVERWRITE
-FILE:/usr/local/include/mad.h:$OVERWRITE
-FILE:/usr/local/include/ogg/config_types.h:$OVERWRITE
-FILE:/usr/local/include/ogg/ogg.h:$OVERWRITE
-FILE:/usr/local/include/ogg/os_types.h:$OVERWRITE
-FILE:/usr/local/include/png.h:$OVERWRITE
-FILE:/usr/local/include/pngconf.h:$OVERWRITE
-FILE:/usr/local/include/vorbis/codec.h:$OVERWRITE
-FILE:/usr/local/include/vorbis/vorbisenc.h:$OVERWRITE
-FILE:/usr/local/include/vorbis/vorbisfile.h:$OVERWRITE
-FILE:/usr/local/include/zconf.h:$OVERWRITE
-FILE:/usr/local/include/zlib.h:$OVERWRITE
 #libraries
 FILE:/usr/local/lib/libSDL-1.2.0.0.6.dylib:$OVERWRITE
 FILE:/usr/local/lib/libSDL-1.2.0.dylib:$OVERWRITE
@@ -190,6 +170,35 @@ FILE:/usr/local/lib/libvorbisfile.la:$OVERWRITE
 FILE:/usr/local/lib/libz.a:$OVERWRITE
 FILE:/usr/local/lib/pkgconfig/libpng.pc:$OVERWRITE
 FILE:/usr/local/lib/pkgconfig/libpng12.pc:$OVERWRITE
+#Frameworks
+FILE:/System/Library/Frameworks/SDL.framework:$OVERWRITE
+FILE:/System/Library/Frameworks/SDL_image.framework:$OVERWRITE
+
+ASK:DEV:Do you want to install the developer files including header files and man pages. Note, this is only needed for StepMania Developers.
+IF:$DEV:DOCS:
+RETURN:1
+
+LABEL:DOCS
+#headers
+FILE:/usr/local/include/SDL:$OVERWRITE
+FILE:/usr/local/include/jconfig.h:$OVERWRITE
+FILE:/usr/local/include/jpeglib.h:$OVERWRITE
+FILE:/usr/local/include/jmorecfg.h:$OVERWRITE
+FILE:/usr/local/include/jerror.h:$OVERWRITE
+FILE:/usr/local/include/libpng:$OVERWRITE
+FILE:/usr/local/include/libpng12/png.h:$OVERWRITE
+FILE:/usr/local/include/libpng12/pngconf.h:$OVERWRITE
+FILE:/usr/local/include/mad.h:$OVERWRITE
+FILE:/usr/local/include/ogg/config_types.h:$OVERWRITE
+FILE:/usr/local/include/ogg/ogg.h:$OVERWRITE
+FILE:/usr/local/include/ogg/os_types.h:$OVERWRITE
+FILE:/usr/local/include/png.h:$OVERWRITE
+FILE:/usr/local/include/pngconf.h:$OVERWRITE
+FILE:/usr/local/include/vorbis/codec.h:$OVERWRITE
+FILE:/usr/local/include/vorbis/vorbisenc.h:$OVERWRITE
+FILE:/usr/local/include/vorbis/vorbisfile.h:$OVERWRITE
+FILE:/usr/local/include/zconf.h:$OVERWRITE
+FILE:/usr/local/include/zlib.h:$OVERWRITE
 #man files
 FILE:/usr/local/man/man1/cjpeg.1:$OVERWRITE
 FILE:/usr/local/man/man1/djpeg.1:$OVERWRITE
@@ -539,9 +548,6 @@ FILE:/usr/local/share/doc/libvorbis-1.0/white-ogg.png:$OVERWRITE
 FILE:/usr/local/share/doc/libvorbis-1.0/white-xifish.png:$OVERWRITE
 FILE:/usr/local/share/doc/libvorbis-1.0/window1.png:$OVERWRITE
 FILE:/usr/local/share/doc/libvorbis-1.0/window2.png:$OVERWRITE
-#Frameworks
-FILE:/System/Library/Frameworks/SDL.framework:$OVERWRITE
-FILE:/System/Library/Frameworks/SDL_image.framework:$OVERWRITE
 
 PRIVILEGED:
 RETURN:1
