move Sammi Cheng characters into a separate page

--- a/stepmania/Themes/default/Fonts/_japanese 16px.ini
+++ b/stepmania/Themes/default/Fonts/_japanese 16px.ini
@@ -15,6 +15,14 @@ DefaultWidth=20
 # This page maps to basic-japanese (Unicode U+3000 to U+30FF.)
 range basic-japanese=0
 
+[extra]
+# This page is a special case: characters that aren't automatically-generated.
+# 郑 is Chinese, and isn't in MS gothic, so we use MingLiU instead.  Put the whole
+# name in this font, or it'll look wrong.  If we need these characters for a Japanese
+# name, it'll be tricky.  The real solution is to tag text by language, so we can have
+# eg. separate 文 characters for Japanese and Chinese.
+line 0=郑秀文
+
 # Smaller center dot.
 251=10
 
@@ -54,5 +62,5 @@ line 1=男眠胎自魂女宏和
 line 2=魅惑音頭踊貸与園
 line 3=黙藁面鳥近浩治入
 line 4=尾信充乙陽記念歌
-line 5=奇侠秀文記念沢氷
-line 6=恭王菲
+line 5=奇侠記念沢氷恭王
+line 6=菲
