--- a/stepmania/Themes/default/Fonts/_japanese 24px.ini
+++ b/stepmania/Themes/default/Fonts/_japanese 24px.ini
@@ -18,6 +18,9 @@ range basic-japanese=0
 # Smaller center dot.
 251=14
 
+[extra]
+line 0=郑秀文
+
 [kanji 1]
 line 0=一二三四五六七八
 line 1=九十本語＆（）？
@@ -54,5 +57,5 @@ line 1=男眠胎自魂女宏和
 line 2=魅惑音頭踊貸与園
 line 3=黙藁面鳥近浩治入
 line 4=尾信充乙陽記念歌
-line 5=奇侠秀文記念沢氷
-line 6=恭王菲
+line 5=奇侠記念沢氷恭王
+line 6=菲
