--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2125,12 +2125,13 @@ ProgressiveStageLifebar=Determine whether the lifebar gets harsher on later stag
 ProgressiveNonstopLifebar=Determine whether the lifebar gets harsher as a nonstop course::progresses.  LifeDifficulty + this = Lifedifficulty on a final stage of a course.
 DefaultFailType=Choose the conditions for game over.::ARCADE will stop the music immediately when all players have 0 life.::END OF SONG will cause the game to end at the conclusion of the current song::if all players failed at some point during the song.::OFF disables game over entirely.
 ShowSongOptions=Select the availability of the Song Options screen.::When HIDE, it can not be accessed.  When SHOW, it will always be shown.::When set to ASK, it can be accessed by pressing START a::second time after the Player Options screen.
+ShowNameEntry=Determines if name entry should never be shown, always be shown, or shown when::the course is listed on the high scores screen.
 StyleIcon=0
 TimerSeconds=0
 PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
 NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
 
-OptionMenuFlags=rows,9;together;explanations
+OptionMenuFlags=rows,10;together;explanations
 Line1=conf,MenuTimer
 Line2=conf,ScoringType
 Line3=conf,JudgeDifficulty
@@ -2140,6 +2141,7 @@ Line6=conf,ProgressiveStageLifebar
 Line7=conf,ProgressiveNonstopLifebar
 Line8=conf,DefaultFailType
 Line9=conf,ShowSongOptions
+Line10=conf,ShowNameEntry
 
 [ScreenGraphicOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
