--- a/stepmania/configure.ac
+++ b/stepmania/configure.ac
@@ -77,6 +77,18 @@ SM_AUDIO
 AC_SEARCH_LIBS(avcodec_init, [avcodec], have_libavcodec=yes,  have_libavcodec=no)
 AC_SEARCH_LIBS(guess_format, [avformat], have_libavformat=yes,  have_libavformat=no)
 
+if test "$have_libavcodec" = "yes"; then
+  AC_MSG_CHECKING([for libavcodec >= 0.4.8])
+  AC_TRY_RUN([
+      #include <ffmpeg/avcodec.h>
+      int main()
+      {
+	      return ( FFMPEG_VERSION_INT < 0x000408 )? 1:0;
+      }
+      ],,have_libavcodec=no,)
+  AC_MSG_RESULT($have_libavformat)
+fi
+
 have_ffmpeg=no
 if test "$have_libavformat" = "yes" -a "$have_libavcodec" = "yes"; then
 	have_ffmpeg=yes
