per-player explanation text on options screens

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1768,8 +1768,12 @@ ItemsStartX=160
 ItemsGapX=14
 ItemsStartY=88
 ItemsSpacingY=34
-ExplanationX=320
-ExplanationY=412
+ExplanationP1X=180
+ExplanationP1Y=412
+ExplanationP2X=460
+ExplanationP2Y=412
+ExplanationTogetherX=320
+ExplanationTogetherY=412
 ExplanationZoom=0.5
 ColorSelected=1,1,1,1		// normal
 ColorNotSelected=0.5,0.5,0.5,1	// grayed
@@ -2728,6 +2732,23 @@ Line13=list,Profile Options;title,;
 Line14=list,Reload Songs/Courses;title,;
 Line15=list,Test Input;title,;
 
+AppearanceOptions=
+AutogenOptions=
+BackgroundOptions=
+Bookkeeping=
+CenterImage=
+CoinOptions=
+ConfigKey/JoyMappings=
+InputOptions=
+GameplayOptions=
+GraphicOptions=
+MachineOptions=
+SoundOptions=
+ProfileOptions=
+ReloadSongs/Courses=
+TestInput=
+
+
 [TextBanner]
 TitleHorizX=-90
 SubTitleHorizX=-90
@@ -2784,6 +2805,20 @@ OptionMenuFlags=rows,1;together
 Line1=conf,Game
 
 [ScreenPlayerOptions]
+Speed=
+Acceleration=
+Effect=
+Appearance=
+Turn=
+Transform=
+Scroll=
+NoteSkins=
+Holds=
+Hide=
+Persp=
+Steps=
+Characters=
+
 PrevScreenArcade=ScreenSelectMusic
 PrevScreenNonstop=ScreenSelectCourse
 PrevScreenOni=ScreenSelectCourse
