--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1741,8 +1741,8 @@ ExplanationTogetherX=70
 ExplanationTogetherY=412
 ExplanationTogetherOnCommand=wrapwidthpixels,1000;horizalign,left;cropright,1;linear,0.5;cropright,0
 ExplanationZoom=0.5
-ExplanationP1OnCommand=wrapwidthpixels,600;horizalign,left
-ExplanationP2OnCommand=wrapwidthpixels,600;horizalign,right
+ExplanationP1OnCommand=wrapwidthpixels,600;horizalign,left;cropright,1;linear,0.5;cropright,0
+ExplanationP2OnCommand=wrapwidthpixels,600;horizalign,right;cropright,1;linear,0.5;cropright,0
 ColorSelected=1,1,1,1		// normal
 ColorNotSelected=0.5,0.5,0.5,1	// grayed
 NumShownItems=10
