add echo, planted, stomp transforms

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1741,8 +1741,8 @@ ExplanationTogetherX=70
 ExplanationTogetherY=412
 ExplanationTogetherOnCommand=wrapwidthpixels,1000;horizalign,left;cropright,1;linear,0.5;cropright,0
 ExplanationZoom=0.5
-ExplanationP1OnCommand=wrapwidthpixels,600;horizalign,left;cropright,1;linear,0.5;cropright,0
-ExplanationP2OnCommand=wrapwidthpixels,600;horizalign,right;cropright,1;linear,0.5;cropright,0
+ExplanationP1OnCommand=wrapwidthpixels,500;horizalign,left;cropright,1;linear,0.5;cropright,0
+ExplanationP2OnCommand=wrapwidthpixels,500;horizalign,right;cropright,1;linear,0.5;cropright,0
 ColorSelected=1,1,1,1		// normal
 ColorNotSelected=0.5,0.5,0.5,1	// grayed
 NumShownItems=10
@@ -2940,7 +2940,7 @@ TurnName,5=SHUFFLE
 Turn,6=mod,supershuffle
 TurnName,6=S.SHUFFLE
 
-Transform=7
+Transform=10
 TransformDefault=mod,no transform
 Transform,1=
 TransformName,1=OFF
@@ -2956,6 +2956,12 @@ Transform,6=mod,skippy
 TransformName,6=SKIPPY
 Transform,7=mod,mines
 TransformName,7=MINES
+Transform,8=mod,echo
+TransformName,8=ECHO
+Transform,9=mod,planted
+TransformName,9=PLANTED
+Transform,10=mod,stomp
+TransformName,10=STOMP
 
 Scroll=4
 ScrollDefault=mod,no reverse,no split,no alternate
