move planted to holds option row

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2940,7 +2940,7 @@ TurnName,5=SHUFFLE
 Turn,6=mod,supershuffle
 TurnName,6=S.SHUFFLE
 
-Transform=10
+Transform=9
 TransformDefault=mod,no transform
 Transform,1=
 TransformName,1=OFF
@@ -2958,10 +2958,8 @@ Transform,7=mod,mines
 TransformName,7=MINES
 Transform,8=mod,echo
 TransformName,8=ECHO
-Transform,9=mod,planted
-TransformName,9=PLANTED
-Transform,10=mod,stomp
-TransformName,10=STOMP
+Transform,9=mod,stomp
+TransformName,9=STOMP
 
 Scroll=4
 ScrollDefault=mod,no reverse,no split,no alternate
@@ -2974,12 +2972,14 @@ ScrollName,3=SPLIT
 Scroll,4=mod,alternate
 ScrollName,4=ALTERNATE
 
-Holds=2
+Holds=3
 HoldsDefault=mod,no noholds
 Holds,1=mod,noholds
 HoldsName,1=OFF
 Holds,2=
 HoldsName,2=ON
+Holds,3=mod,planted
+HoldsName,3=PLANTED
 
 Hide=3
 HideDefault=mod,no dark,no blind
